# excel-sales-automation

./: .dockerignore  .gitignore  CHECKLIST_INICIAL.md  DESENVOLVIMENTO.md  ENV_TEMPLATE.txt  LICENSE  Makefile  README.md  SETUP_INSTRUCTIONS.md  pyproject.toml  requirements.txt
app/api/: dependencies.py  routes.py
app/core/: __init__.py  config.py
app/ui/: main.py
docker/: Dockerfile  docker-compose.yml
