[tool.poetry]
name = "excel-sales-automation"
version = "0.1.0"
description = "Sistema de automação de planilhas Excel com processamento determinístico e interpretação por LLM"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
license = "MIT"

[tool.poetry.dependencies]
python = "^3.11"
# Core Framework
fastapi = "^0.109.0"
uvicorn = {extras = ["standard"], version = "^0.27.0"}
# Data Processing
pandas = "^2.2.0"
openpyxl = "^3.1.2"
xlrd = "^2.0.1"
# File Handling
python-multipart = "^0.0.6"
# Validation & Settings
pydantic = "^2.5.3"
pydantic-settings = "^2.1.0"
# LLM & AI (Core apenas - sem agentes complexos)
langchain-core = "^0.1.15"
langchain-openai = "^0.0.5"
openai = "^1.10.0"
# UI
streamlit = "^1.30.0"
# Utilities
python-dotenv = "^1.0.0"
typer = "^0.9.0"

[tool.poetry.group.dev.dependencies]
# Testing
pytest = "^8.0.0"
pytest-cov = "^4.1.0"
pytest-asyncio = "^0.23.3"
# Code Quality
black = "^24.1.0"
isort = "^5.13.2"
flake8 = "^7.0.0"
mypy = "^1.8.0"
# Type Stubs
pandas-stubs = "^2.1.4.231227"
types-openpyxl = "^3.1.0.20240120"

[tool.black]
line-length = 100
target-version = ['py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # Diretórios padrão a ignorar
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | data
)/
'''

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
skip_glob = ["*/data/*", "*.pyc"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_any_generics = false
disallow_subclassing_any = false
disallow_untyped_calls = false
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
strict_equality = true
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = [
    "openpyxl.*",
    "streamlit.*",
    "langchain.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--strict-markers",
    "--cov=app",
    "--cov-report=term-missing",
    "--cov-report=html",
]
asyncio_mode = "auto"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
